--- a/src/index.html
+++ b/src/index.html
@@ -4,164 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Herramientas Digitales</title>
-  <style>
-    :root {
-      --bg-color: #121212;
-      --card-bg: #1e1e1e;
-      --text-color: #f5f5f5;
-      --accent-color: #444444;
-      --highlight-color: #666666;
-      --success-color: #4CAF50;
-      --error-color: #f44336;
-      --transition: all 0.3s ease;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    body {
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      min-height: 100vh;
-      margin: 0 auto;
-    }
-
-    header {
-      position: sticky;
-      top: 0;
-      background-color: var(--card-bg);
-      padding: 1rem 1rem;
-      margin-bottom: 50px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-      z-index: 100;
-      width: 100%;
-    }
-
-    nav {
-      display: flex;
-      flex-direction: column-reverse;
-      row-gap: 1rem;
-      width: 100%;
-    }
-
-    h1 {
-      font-size: 1.5rem;
-      font-weight: 500;
-      text-align: center;
-    }
-
-    .home-link {
-      color: var(--text-color);
-      text-decoration: none;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      transition: var(--transition);
-    }
-
-    .home-link:hover {
-      color: var(--highlight-color);
-    }
-
-    main {
-      margin-bottom: 30px;
-    }
-
-    .tools-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
-      gap: 1.5rem;
-      justify-content: center;
-      padding: 0 1rem;
-    }
-
-    .tool-card {
-      background-color: var(--card-bg);
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      transition: var(--transition);
-      height: 220px;
-      display: flex;
-      flex-direction: column;
-      cursor: pointer;
-    }
-
-    .tool-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-    }
-
-    .tool-card:active {
-      transform: translateY(0);
-    }
-
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
-
-    .tool-icon {
-      height: 120px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-      background-color: var(--accent-color);
-    }
-
-    .tool-icon svg {
-      width: 64px;
-      height: 64px;
-      fill: var(--text-color);
-    }
-
-    .tool-info {
-      padding: 15px;
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-
-    .tool-title {
-      font-size: 1.1rem;
-      font-weight: 500;
-      margin-bottom: 8px;
-    }
-
-    .tool-desc {
-      font-size: 0.85rem;
-      color: var(--highlight-color);
-      line-height: 1.3;
-    }
-
-    /* Responsive adjustments */
-    @media (min-width: 450px) {
-      header {
-        padding: 1rem 2rem;
-      }
-      nav {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-      }
-      .tools-grid {
-        padding: 0 2rem;
-      }
-    }
-
-    .icon {
-      display: inline-block;
-      stroke-width: 0;
-      stroke: currentColor;
-      fill: currentColor;
-    }
-  </style>
+  <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
+  <link rel="stylesheet" href="/public/styles/homepage.css">
 </head>
 <body>
   <header>
