--- a/src/qrscanner.html
+++ b/src/qrscanner.html
@@ -4,284 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Herramientas Digitales</title>
-  <style>
-    :root {
-      --bg-color: #121212;
-      --card-bg: #1e1e1e;
-      --text-color: #f5f5f5;
-      --accent-color: #444444;
-      --highlight-color: #666666;
-      --success-color: #4CAF50;
-      --error-color: #f44336;
-      --transition: all 0.3s ease;
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    body {
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      min-height: 100vh;
-      margin: 0 auto;
-    }
-
-    header {
-      position: sticky;
-      top: 0;
-      background-color: var(--card-bg);
-      padding: 1rem 1rem;
-      margin-bottom: 3rem;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-      z-index: 100;
-      width: 100%;
-    }
-
-    nav {
-      display: flex;
-      flex-direction: column-reverse;
-      row-gap: 1rem;
-      width: 100%;
-    }
-
-    h1 {
-      font-size: 1.4rem;
-      font-weight: 500;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-    }
-
-    .home-link {
-      color: var(--text-color);
-      text-decoration: none;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      transition: var(--transition);
-    }
-
-    .home-link:hover {
-      color: var(--highlight-color);
-    }
-
-    main {
-      margin-bottom: 30px;
-    }
-
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
-
-    .icon {
-      display: inline-block;
-      stroke-width: 0;
-      stroke: currentColor;
-      fill: currentColor;
-    }
-
-    .scanner-container {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      width: 100%;
-      max-width: 60rem;
-      padding: 0 1rem;
-      margin: 0 auto;
-    }
-
-    .input-section {
-      background-color: var(--card-bg);
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      transition: var(--transition);
-      width: 100%;
-    }
-
-    .preview-section {
-      background-color: var(--card-bg);
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      transition: var(--transition);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-    }
-
-    .file-input-wrapper {
-      position: relative;
-      width: 100%;
-      height: 60px;
-      margin-bottom: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .file-input-label {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-      width: 100%;
-      height: 100%;
-      background-color: var(--accent-color);
-      border-radius: 8px;
-      cursor: pointer;
-      transition: var(--transition);
-    }
-
-    .file-input-label:hover {
-      background-color: var(--highlight-color);
-    }
-
-    .file-input-label:active {
-      transform: scale(0.98);
-    }
-
-    #file-input {
-      position: absolute;
-      width: 0;
-      height: 0;
-      opacity: 0;
-    }
-
-    .result-container {
-      padding: 15px;
-      border-radius: 8px;
-      background-color: var(--accent-color);
-      margin-top: 15px;
-      word-break: break-all;
-      width: 100%;
-      transition: var(--transition);
-    }
-
-    .result-container.success {
-      background-color: rgba(76, 175, 80, 0.2);
-      border-left: 4px solid var(--success-color);
-    }
-
-    .result-container.error {
-      background-color: rgba(244, 67, 54, 0.2);
-      border-left: 4px solid var(--error-color);
-    }
-
-    .result-url {
-      margin-top: 10px;
-      padding: 5px 0;
-      color: #2196F3;
-      text-decoration: underline;
-      cursor: pointer;
-      display: inline-flex;
-      align-items: center;
-      gap: 5px;
-    }
-
-    .result-url:hover {
-      color: #64B5F6;
-    }
-
-    .preview-container {
-      width: 100%;
-      height: 300px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-      position: relative;
-      border-radius: 8px;
-      background-color: var(--accent-color);
-    }
-
-    #preview-image {
-      max-width: 100%;
-      max-height: 100%;
-      object-fit: contain;
-      opacity: 0;
-      transition: opacity 0.3s ease;
-    }
-
-    #preview-image.loaded {
-      opacity: 1;
-    }
-
-    .preview-placeholder {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-      color: var(--text-color);
-      opacity: 0.7;
-    }
-
-    .loading-spinner {
-      display: none;
-      width: 40px;
-      height: 40px;
-      border: 4px solid rgba(255, 255, 255, 0.1);
-      border-radius: 50%;
-      border-top: 4px solid var(--text-color);
-      animation: spin 1s linear infinite;
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    .status-message {
-      text-align: center;
-      font-weight: 500;
-      font-size: 1rem;
-      margin-top: 10px;
-      min-height: 24px;
-    }
-
-    /* Responsive adjustments */
-    @media (min-width: 450px) {
-      header {
-        padding: 1rem 2rem;
-      }
-      nav {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-      }
-      .scanner-container {
-        padding: 0 2rem;
-      }
-    }
-
-    /* Responsive layout */
-    @media (min-width: 768px) {
-      .scanner-container {
-        flex-direction: row;
-      }
-
-      .input-section {
-        width: 50%;
-      }
-
-      .preview-section {
-        width: 50%;
-      }
-    }
-  </style>
+  <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
+  <link rel="stylesheet" href="/public/styles/qrscanner.css">
+  <script src="/public/scripts/qrscanner.js" defer></script>
 </head>
 <body>
   <header>
@@ -346,9 +71,9 @@
     </div>
   </main>
 
-  <script type="module">
+  <script>
     // Importamos el módulo QrScanner desde el archivo local 'qr-scanner.min.js'
-    import QrScanner from './public/qr-scanner.min.js';
+    //import QrScanner from './public/qr-scanner.min.js';
     
     // Obtenemos referencias a los elementos del DOM
     const fileInput = document.getElementById('file-input');
