feat(ui): add favicon to qrgenerator.html

--- a/src/qrgenerator.html
+++ b/src/qrgenerator.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Herramientas Digitales</title>
+  <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
   <link rel="stylesheet" href="/public/styles/qrgenerator.css">
   <script src="/public/scripts/qrgenerator.js" defer></script>
 </head>
